--- a/style.css
+++ b/style.css
@@ -1,10 +1,42 @@
-.container {
-    display: grid; 
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    row-gap: 20px;
-    column-gap: 20px;
+body {
+    background-color: rgb(193, 202, 222);
+}
+
+.score {
+    font-family: "Lucida Console", 	"Courier New", monospace;
+    color: rgb(118, 120, 230); 
+    margin-top: 30px;
+    align-content: center;
+    justify-content: center;
+    display: flex;
+    font: 60px; 
+}
+button {
+    margin-top: -12px;
+    margin-left: 10px; 
+    font-family: "Lucida Console", 	"Courier New", monospace;
+    letter-spacing: 1px;
+    font-weight: bold;
+    font-size: 20px;
+    border: 3px solid rgba(255, 255, 255);
+    background-color: rgb(74, 84, 137);
+    box-shadow: 1px 1px 2px rgba(49, 49, 185);
+    color: rgb(157, 164, 199);
+    border-radius: 10px 10px;
     padding: 10px;
+    cursor: pointer;
+}
+
+.container {
+    align-content: center;
+    justify-content: center;
+    margin: auto;
+    display: grid; 
+    grid-template-columns: repeat(4, 0.08fr);
+    grid-template-rows: repeat(4, 0.1fr);
+    row-gap: 20px;
+    column-gap: 10px;
+    
 }
 
 .container > img {
@@ -13,6 +45,6 @@
     font-size: 30pt;
     border: 2px solid black;
     border-radius: 10px;
-    height: 40vh; 
+    height: 20vh; 
 }
 
